--- a/templates/config.yaml.up_to_0.23.j2
+++ b/templates/config.yaml.up_to_0.23.j2
@@ -1,30 +1,9 @@
-# {{ ansible_managed }}
-{% if blocky__hosts_dns_enabled -%}
-# Added to blocky__custom_dns from inventory due to blocky__hosts_dns_enabled=true
-{% for host in groups[blocky__hosts_dns_invenory_group] -%}
-{% set fqdn = host + blocky__hosts_dns_domain %}
-{% if (hostvars[host]["blocky__hosts_dns_ignore"] is undefined or not hostvars[host]["blocky__hosts_dns_ignore"])
-  and fqdn not in blocky__custom_dns
-  and hostvars[host][blocky__hosts_dns_host_ip_var] is defined
-  and host != "localhost" %}
-{% set _ = blocky__custom_dns.update({ fqdn: hostvars[host][blocky__hosts_dns_host_ip_var] }) -%}
-{% else -%}
-# Skipping {{ host }}
-{% endif -%}
-{% endfor -%}
-{% endif -%}
-
-{% if blocky__cert_file | length > 0 and blocky__key_file | length > 0 -%}
-certFile: "{{ blocky__cert_file }}"
-keyFile: "{{ blocky__key_file }}"
-{% endif -%}
-{% if blocky__min_tls_version | length > 0 -%}
-minTlsServeVersion: "{{ blocky__min_tls_version }}"
-{% endif -%}
-
+{% extends "config_base.j2" -%}
+{% block upstreams -%}
 upstream:
   {{ blocky__upstreams | to_nice_yaml(indent=2) | trim | indent(2) }}
-
+{% endblock %}
+{% block blocking -%}
 blocking:
   blockTTL: 10s
   blackLists:
@@ -33,37 +12,4 @@ blocking:
     {{ blocky__blocking_client_groups_block | to_nice_yaml(indent=2) | trim | indent(4) }}
   whiteLists:
     {{ blocky__blocking_whitelists | to_nice_yaml(indent=2) | trim | indent(4) }}
-
-ports:
-  dns: {{ blocky__ports_dns | to_nice_yaml(indent=2) | trim | indent(2) }}
-  http: {{ blocky__ports_http | to_nice_yaml(indent=2) | trim | indent(2) }}
-  {% if blocky__ports_https | trim | length > 0 -%}
-  https: {{ blocky__ports_https | to_nice_yaml(indent=2) | trim | indent(2) }}
-  {% endif -%}
-  {% if blocky__ports_tls | trim | length > 0 -%}
-  tls: {{ blocky__ports_tls | to_nice_yaml(indent=2) | trim | indent(2) }}
-  {% endif %}
-
-log:
-  level: {{ blocky__log_level | to_nice_yaml(indent=2) | trim | indent(2) }}
-
-caching:
-  minTime: 5m
-  maxTime: 60m
-  prefetching: true
-
-customDNS:
-  customTTL: 60m
-  filterUnmappedTypes: true
-  rewrite:
-  mapping:
-    {{ blocky__custom_dns | to_nice_yaml(indent=2) | trim | indent(4) }}
-
-conditional:
-  fallbackUpstream: false
-  mapping:
-    {{ blocky__custom_domain | to_nice_yaml(indent=2) | trim | indent(4) }}
-
-prometheus:
-  enable: true
-  path: /metrics
+{% endblock%}
