Allow for conditional forwading to fallback upstream

--- a/templates/config_base.j2
+++ b/templates/config_base.j2
@@ -72,7 +72,7 @@ customDNS:
 
 {% block conditional -%}
 conditional:
-  fallbackUpstream: false
+  fallbackUpstream: {{ blocky__custom_domain_fallback_upstream | lower }}
   mapping:
     {{ blocky__custom_domain | to_nice_yaml(indent=2) | trim | indent(4) }}
 {% endblock %}
