fix: Empty bootstrapDns entry is not a valid configuration Only add bootstrapDns block to config file if at least one bootstrapDns entry is supplied

--- a/templates/config_base.j2
+++ b/templates/config_base.j2
@@ -71,8 +71,10 @@ customDNS:
 {% endblock %}
 
 {% block bootstrap_dns -%}
+{% if blocky__bootstrap_dns | length > 0 %}
 bootstrapDns:
   {{ blocky__bootstrap_dns | to_nice_yaml(indent=2) | trim | indent(2) }}
+{% endif %}
 {% endblock %}
 
 {% block conditional -%}
